--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "homepage": "",
   "private": true,
+  "engines": {
+    "node": "^12.16.1 ",
+    "yarn": "^1.22.4"
+  },
   "scripts": {
     "start": "webpack-dev-server --mode development --inline --progress",
     "build": "webpack --mode production",
