--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "sticky-kit": "^1.1.3",
     "sticky-sidebar": "^3.3.1",
     "theia-sticky-sidebar": "^1.7.0",
-    "webpack": "^4.44.0"
+    "webpack-cli": "^3.3.12"
+
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
@@ -89,7 +90,7 @@
     "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^4.44.0",
     "webpack-dev-server": "^3.11.0",
     "xml-loader": "^1.2.1"
   }
