--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "yarn": "^1.22.4"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development --inline --progress",
+    "start": "webpack server --mode development --inline --progress",
     "build": "webpack --mode production",
-    "dev": "webpack-dev-server",
+    "dev": "webpack server",
     "production": "webpack --mode production"
   },
   "keywords": [
@@ -39,8 +39,8 @@
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^5.2.0",
-    "html-webpack-plugin": "^4.3.0",
     "history": "^5.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "jquery": "^3.5.1",
     "jquery-slimscroll": "^1.3.8",
     "jquery-sticky-kit": "^1.1.3",
@@ -82,7 +82,6 @@
     "css-loader": "^4.1.0",
     "csv-loader": "^3.0.3",
     "file-loader": "^6.0.0",
-
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "papaparse": "^5.2.0",
@@ -90,7 +89,7 @@
     "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
-    "webpack": "^4.44.0",
+    "webpack": "^5.31.0",
     "webpack-dev-server": "^3.11.0",
     "xml-loader": "^1.2.1"
   }
