--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "font-awesome": "^4.7.0",
     "fullcalendar": "^5.2.0",
     "history": "^5.0.0",
-    "html-webpack-plugin": "^4.3.0",
+
     "jquery": "^3.5.1",
     "jquery-slimscroll": "^1.3.8",
     "jquery-sticky-kit": "^1.1.3",
@@ -70,7 +70,7 @@
     "sticky-kit": "^1.1.3",
     "sticky-sidebar": "^3.3.1",
     "theia-sticky-sidebar": "^1.7.0",
-    "webpack-cli": "^4.6.0"
+
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
@@ -81,6 +81,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.1.0",
     "csv-loader": "^3.0.3",
+    "html-webpack-plugin": "^4.3.0",
     "file-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
@@ -90,6 +91,7 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
     "webpack": "^5.31.0",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.0",
     "xml-loader": "^1.2.1"
   }
