--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "slick-carousel": "^1.8.1",
     "sticky-kit": "^1.1.3",
     "sticky-sidebar": "^3.3.1",
-    "theia-sticky-sidebar": "^1.7.0",
+    "theia-sticky-sidebar": "^1.7.0"
 
   },
   "devDependencies": {
