--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "homepage": "",
   "private": true,
   "engines": {
-    "node": "^12.16.1 ",
-    "yarn": "^1.22.4"
+    "node": "12.16.1 ",
+    "yarn": "1.22.5"
   },
   "scripts": {
     "start": "webpack server --mode development --inline --progress",
