--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "homepage": "",
   "private": true,
   "engines": {
-    "node": "12.18.0 ",
-    "yarn": "1.22.4"
+    "node": "12.16.1 ",
+    "yarn": "1.22.5"
   },
   "scripts": {
     "start": "webpack server --mode development --inline --progress",
@@ -40,7 +40,6 @@
     "font-awesome": "^4.7.0",
     "fullcalendar": "^5.2.0",
     "history": "^5.0.0",
-
     "jquery": "^3.5.1",
     "jquery-slimscroll": "^1.3.8",
     "jquery-sticky-kit": "^1.1.3",
@@ -70,19 +69,19 @@
     "sticky-kit": "^1.1.3",
     "sticky-sidebar": "^3.3.1",
     "theia-sticky-sidebar": "^1.7.0"
-
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@babel/runtime": "^7.13.10",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.1.0",
     "csv-loader": "^3.0.3",
-    "html-webpack-plugin": "^4.3.0",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "papaparse": "^5.2.0",
